# kctracker-public

./: README.md  me.flagmaster.kctracker.json  me.flagmaster.kctracker.json~  meson.build
_build/: .gnome-builder-devenv  .ninja_deps  .ninja_log  build.ninja  compile_commands.json  config.h
_build/data/: me.flagmaster.kctracker.metainfo.xml  me.flagmaster.kctracker.service
_build/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-compilers.json  intro-dependencies.json  intro-install_plan.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
_build/meson-logs/: install-log.txt  meson-log.txt
_build/meson-private/: cmd_line.txt
_build/src/: kctracker  kctracker-resources.c  kctracker-resources.h
_build/src/kctracker.p/: application.c  main.c  window.c
_build/src/kctracker.p/gtk/: mapwidget.c  markermaker.c  markers.c
data/: me.flagmaster.kctracker.desktop.in  me.flagmaster.kctracker.gschema.xml  me.flagmaster.kctracker.metainfo.xml.in  me.flagmaster.kctracker.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: application.vala  kctracker.gresource.xml  main.vala  meson.build  window.ui  window.vala
src/gtk/: iconColours.css  mapwidget.vala  markermaker.vala  markers.vala  routes.json
